--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -111,6 +111,16 @@ a.brand {
   font-size: 3rem;
   font-weight: bold;
 }
+
+.badge {
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -134,10 +144,20 @@ a.brand {
   flex: 2 1 50rem;
 }
 
+.min-30{
+  min-width: 30rem;
+}
+
 /* Image */
 img {
   border-radius: 0.5rem;
 }
+
+img.small{
+  max-width: 5rem;
+  width: 100%;
+}
+
 img.medium {
   max-width: 29rem;
   width: 100%;
@@ -198,4 +218,19 @@ img.large{
 .alert-danger {
   color: #a02020;
   background-color: #ffe0e0;
+}
+
+/* Form */
+.form {
+  max-width: 60rem;
+  margin: 0 auto;
+}
+.form > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+}
+.form label {
+  margin: 1rem 0;
+  display: block;
 }
