--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -196,6 +196,9 @@ img.large{
 
 /* Alert */
 
+.loading{
+  display: block !important;
+}
 
 .success{
   color: #20a020;
@@ -219,6 +222,8 @@ img.large{
   color: #a02020;
   background-color: #ffe0e0;
 }
+
+
 
 /* Form */
 .form {
@@ -255,4 +260,18 @@ img.large{
 }
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+
+/* Checkout Steps */
+.checkout-steps > div {
+  border-top: 0.3rem #c0c0c0 solid;
+  color: #c0c0c0;
+  flex: 1;
+  padding: 1rem;
+  font-weight: bold;
+}
+.checkout-steps > div.active {
+  border-top-color: #f08000;
+  color: #f08000;
 }
